2023-09-27T00:28:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6319789413 # 1199
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 91 278 / 95 282
* notice: next accum: outdated-unq outdated-all / unq all: 92 279 / 95 282
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-12] / []

2023-09-26T16:07:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6315363980 # 1198
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 91 278 / 94 281
* notice: next accum: outdated-unq outdated-all / unq all: 91 278 / 95 282
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-26]

2023-09-24T08:07:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6288893825 # 1191
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 90 276 / 94 281
* notice: next accum: outdated-unq outdated-all / unq all: 91 278 / 94 281
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-10] / []

2023-09-23T16:05:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6284693082 # 1189