@@ -1,3 +1,12 @@
+2023-09-27T08:08:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6323148949 # 1200
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 92 279 / 95 282
+* notice: next accum: outdated-unq outdated-all / unq all: 92 279 / 96 283
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-27]
+
 2023-09-27T00:28:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6319789413 # 1199
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
